--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 logging.level.org.springframework.web: DEBUG
-spring.datasource.url=jdbc:mysql://localhost:3306/testing
+spring.datasource.url=jdbc:mysql://localhost:3306/pms
 spring.datasource.username=root
 spring.datasource.password=root123
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-mybatis.mapper-locations=classpath:mapper/StudentMapper.xml
