--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,15 @@
 #spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 #mybatis.mapper-locations=classpath:mapper/StudentMapper.xml
 
+# MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/pms
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
+
+spring.jpa.hibernate.ddl-auto=update
