--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
 		<version>2.7.17</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.sathish.angulartest</groupId>
-	<artifactId>angulartest</artifactId>
+	<groupId>com.hyundai.pms</groupId>
+	<artifactId>pms</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>angulartest</name>
-	<description>Demo project for Spring Boot</description>
+	<name>pms</name>
+	<description>Hyundai Project Management System</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
